--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Random user Generator</title>
 </head>
 
-<body></body>
+<body>
+    <div id="app"></div>
+
+    <script src="https://unpkg.com/vue@3.0.5"></script>
+    <script src="app.js"></script>
+</body>
 
 </html>
